移植到NeoForge 1.21.1并完善好友联机功能，重写了UI更还原官方